backup/k8s_backup/caasportal-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caasportal-backend
spec:
  selector:
    matchLabels:
      app: caasportal-backend
  template:
    metadata:
      labels:
        app: caasportal-backend
    spec:
      containers:
        - name: caasportal-backend
          image: caasportal-backend
          ports:
          - containerPort: 8001
          resources:
            requests:
              cpu: 500m
              memory: 384Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: caasportal-backend
spec:
  type: ClusterIP
  selector:
    app: caasportal-backend
  ports:
  - port: 8001
