backup/k8s_backup/caasportal-provisioner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caasportal-provisioner
spec:
  selector:
    matchLabels:
      app: caasportal-provisioner
  template:
    metadata:
      labels:
        app: caasportal-provisioner
    spec:
      containers:
        - name: caasportal-provisioner
          image: caasportal-provisioner
          ports:
          - containerPort: 8002
          resources:
            requests:
              cpu: 500m
              memory: 384Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: caasportal-provisioner
spec:
  type: ClusterIP
  selector:
    app: caasportal-provisioner
  ports:
  - port: 8002
